--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,104 @@ ul {
 	margin: 0;
 	list-style-type: none;
 }
+
+a {
+	text-decoration: none;
+}
+
+.container {
+	max-width: 1250px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0 10px;
+}
+
+.site-header {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+	z-index: 9999;
+	background-color: white;
+}
+
+.site-header .container {
+	display: flex;
+	align-items: center;
+}
+
+.site-logo-link {
+	display: inline-block;
+	margin-right: auto;
+}
+
+.site-nav-list {
+	display: flex;
+}
+
+.site-nav-item {
+	display: flex;
+	justify-content: center;
+	position: relative;
+}
+
+.site-nav-item>a {
+	display: inline-block;
+	padding: 16px;
+	font-size: 15px;
+	line-height: 24px;
+	color: #000000;
+}
+
+.site-nav-item>a:hover {
+	box-shadow: inset 0 -2px 0 0 black;
+	z-index: 10;
+}
+
+.tel-link {
+	display: inline-block;
+	color: white;
+	font-weight: bold;
+	font-size: 15px;
+	line-height: 24px;
+	background: #00BAFC;
+	border-radius: 5px;
+	padding: 5px 13px;
+	border: 3px solid #00BAFC;
+}
+
+.tel-link:hover {
+	background-color: white;
+	color: #00BAFC;
+}
+
+.site-header-drop-down {
+	display: none;
+	position: absolute;
+	top: 100%;
+	width: 120%;
+	box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
+	border-radius: 5px;
+	z-index: 100;
+	background-color: white;
+}
+
+.drop-down-item a {
+	display: inline-block;
+	font-size: 16px;
+	line-height: 24px;
+	padding: 12px 16px;
+	width: 75%;
+	color: black;
+}
+
+.drop-down-item>a:hover {
+	background-color: #00BAFC;
+	color: white;
+
+}
+
+.site-nav-item:hover .site-header-drop-down {
+	display: block !important;
+}
+
